Introduced more robust handling of DB errors DBs without products

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -7,6 +7,10 @@ body {
 	padding-top: 20px;
 }
 
+form {
+	margin: 0;
+}
+
 .loading {
 	background: transparent url(../img/loading.gif) no-repeat 50% 50%;
 	width: 100%;
