--- a/StorefrontDemo/src/main/webapp/admin/css/app.css
+++ b/StorefrontDemo/src/main/webapp/admin/css/app.css
@@ -48,29 +48,36 @@
     margin-right: 10px;
 }
 
-#btnWelcome .x-btn-icon {
-    background-image: url(../img/logo.png);
-    height: 48px;
-    width: 74px;
-    margin: 2px 10px 2px 13px;
-}
-
-#btnWelcome .x-btn-inner {
-    letter-spacing: 0.05em;
+#appTitle {
+    background: transparent url(../img/logo.png) no-repeat;
+    padding: 29px 10px 0 80px;
     font-family: Museo Sans, Arial;
     font-size: 19px;
-    position: relative;
-    padding: 27px 15px 0 90px;
     color: #958979;
+    height: 55px;
+}
+    
+.btn-header {
+    height: 65px;
 }
 
-#btnShowStore-btnEl {
-    overflow: hidden;
+.btn-header .x-btn-inner {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    padding: 0;
+    text-align: left !important;
 }
 
-#btnShowStore .x-btn-icon {
-    width: 64px;
-    height: 64px;
+.btn-header .x-btn-icon {
+    width: 32px;
+    height: 32px;
+    left: 36px;
+    top: 20px;
+}
+
+.btn-header .x-btn-split .x-btn-icon {
+    left: 30px;
 }
 
 .metric-well .label-metric {
@@ -79,9 +86,11 @@
     padding: 2px;
 }
 
+.btn-header .x-btn-inner,
 .metric-well .label-metric b {
     text-transform: uppercase;
     color: #444;
+    font-weight: bold;
 }
 
 .metric-well .label-value {
@@ -96,9 +105,12 @@
     box-sizing: content-box;
 }
 
-.ico-store-48 {
-    background-image: url(../img/ico-store-48.png);
-    background-position: 6px 5px;
+.ico-store-32 {
+    background-image: url(../img/ico-store-32.png);
+}
+
+.ico-panel-32 {
+    background-image: url(../img/ico-panel-32.png);
 }
 
 .jqstooltip {
