Styling tweaks for IE8

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -32,6 +32,7 @@ th.text-center, td.text-center {
 #top-bar {
 	.brand {
 		padding: 0 20px 0 0;
+		white-space: nowrap;
 		
 		img {
 			border-top-left-radius: 4px;
