Added HTML5 form support for non-compliant browsers; updated header links

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -21,6 +21,20 @@ form {
 	display: none;
 }
 
+.icon-github {
+	background: url(../img/github.png);
+	width: 16px;
+	height: 16px;
+	margin-top: 0;
+}
+
+.icon-nuodb {
+	background: url(../img/nuodb.png);
+	width: 16px;
+	height: 16px;
+	margin-top: 0;
+}
+
 th.text-right, td.text-right {
 	text-align: right;
 }
@@ -49,6 +63,10 @@ th.text-center, td.text-center {
 			font-weight: bold;
 			.text-shadow(rgba(255, 255, 255, 0.74902) 0px 1px 1px);		
 		}
+	}
+	
+	.nav>li>a {
+		padding: 10px;
 	}
 	
 	.cart {
