--- a/StorefrontDemo/src/main/webapp/css/Storefront.css
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.css
@@ -1,419 +1,2 @@
 /* Copyright (c) 2013 NuoDB, Inc. */
-/* Copyright (c) 2013 NuoDB, Inc. */
-/*---------------------------------------------------
-    LESS Prefixer
-  ---------------------------------------------------
-    
-    All of the CSS3 fun, none of the prefixes!
-
-    As a rule, you can use the CSS properties you
-    would expect just by adding a '.':
-
-    box-shadow => .box-shadow(@args)
-
-    Also, when shorthand is available, arguments are
-    not parameterized. Learn CSS, not LESS Prefixer.
-
-    -------------------------------------------------
-    TABLE OF CONTENTS
-    (*) denotes a syntax-sugar helper
-    -------------------------------------------------
-
-        .animation(@args)
-            .animation-delay(@delay)
-            .animation-direction(@direction)
-            .animation-duration(@duration)
-            .animation-iteration-count(@count)
-            .animation-name(@name)
-            .animation-play-state(@state)
-            .animation-timing-function(@function)
-        .background-size(@args)
-        .border-radius(@args)
-        .box-shadow(@args)
-            .inner-shadow(@args) *
-        .box-sizing(@args)
-            .border-box() *
-            .content-box() *
-        .columns(@args)
-            .column-count(@count)
-            .column-gap(@gap)
-            .column-rule(@args)
-            .column-width(@width)
-        .gradient(@default,@start,@stop) *
-            .linear-gradient-top(@default,@color1,@stop1,@color2,@stop2,[@color3,@stop3,@color4,@stop4])*
-            .linear-gradient-left(@default,@color1,@stop1,@color2,@stop2,[@color3,@stop3,@color4,@stop4])*
-        .opacity(@factor)
-        .transform(@args)
-            .rotate(@deg)
-            .scale(@factor)
-            .translate(@x,@y)
-            .translate3d(@x,@y,@z)
-            .translateHardware(@x,@y) *
-        .text-shadow(@args)
-        .transition(@args)
-            .transition-delay(@delay)
-            .transition-duration(@duration)
-            .transition-property(@property)
-            .transition-timing-function(@function)
-
-
-
-    Credit to LESS Elements for the motivation and
-    to CSS3Please.com for implementation.
-
-    Copyright (c) 2012 Joel Sutherland
-    MIT Licensed:
-    http://www.opensource.org/licenses/mit-license.php
-
------------------------------------------------------*/
-/* Animation */
-/* Background Size */
-/* Border Radius */
-/* Box Shadows */
-/* Box Sizing */
-/* Columns */
-/* Gradients */
-/* Opacity */
-/* Text Shadow */
-/* Transforms */
-/* Transitions */
-body {
-  overflow-y: scroll;
-  padding-top: 20px;
-}
-form {
-  margin: 0;
-}
-.loading {
-  background: transparent url(../img/loading.gif) no-repeat 50% 50%;
-  width: 100%;
-  height: 100px;
-}
-.hidden {
-  display: none;
-}
-.icon-github {
-  background: url(../img/github.png);
-  width: 16px;
-  height: 16px;
-  margin-top: 0;
-}
-.icon-nuodb {
-  background: url(../img/nuodb.png);
-  width: 16px;
-  height: 16px;
-  margin-top: 0;
-}
-th.text-right,
-td.text-right {
-  text-align: right;
-}
-th.text-center,
-td.text-center {
-  text-align: center;
-}
-#top-bar .brand {
-  padding: 0 20px 0 0;
-  white-space: nowrap;
-}
-#top-bar .brand img {
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  vertical-align: top;
-  height: 36px;
-  margin: 2px 10px 0 20px;
-}
-#top-bar .brand label {
-  display: inline-block;
-  padding-top: 10px;
-  font-size: 20px;
-  font-weight: bold;
-  text-shadow: rgba(255, 255, 255, 0.74902) 0px 1px 1px;
-}
-#top-bar .nav > li > a {
-  padding: 10px;
-}
-#top-bar .cart .badge {
-  margin-left: 10px;
-}
-#top-bar #admin-link {
-  display: none;
-}
-#top-bar .search {
-  position: relative;
-}
-#top-bar .search .search-query {
-  line-height: normal;
-  padding-right: 29px;
-}
-#top-bar .search .search-icon {
-  position: absolute;
-  top: 7px;
-  right: 11px;
-  width: 16px;
-  height: 16px;
-}
-#top-bar .search .search-icon a,
-#top-bar .search .search-icon i {
-  width: 16px;
-  height: 16px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-#top-bar .search .search-icon .search-glass {
-  background: transparent url(../img/search.png) no-repeat 0 0;
-}
-#top-bar .search .search-icon .search-clear {
-  display: none;
-  font-size: 20px;
-  color: #000;
-  cursor: pointer;
-  top: -2px;
-  text-decoration: none;
-}
-#top-bar .search .search-icon-clear .search-glass {
-  display: none;
-}
-#top-bar .search .search-icon-clear .search-clear {
-  display: block;
-}
-#top-bar .navbar-text {
-  padding-right: 15px;
-}
-#category-nav li .close {
-  color: #fff;
-  display: none;
-  opacity: 1;
-  font-weight: normal;
-  text-shadow: #000000 0px 1px 0px;
-}
-#category-nav li.active .close {
-  display: block;
-}
-#category-nav li.active a {
-  background-color: #005580;
-  color: #fff;
-  cursor: pointer;
-}
-#col-content .navbar {
-  min-height: 35px;
-}
-.sidebar h3 {
-  font-size: 18px;
-  margin-top: 5px;
-}
-.thumbnails-prod a:hover,
-.thumbnails-prod a:active {
-  text-decoration: none;
-}
-.thumbnails-prod img {
-  height: 210px;
-  max-width: 210px;
-  width: auto;
-}
-.price {
-  color: #900 !important;
-  font-weight: bold;
-}
-.prod-metadata {
-  margin-top: 2px;
-}
-.prod-metadata div {
-  margin: 2px 0;
-  line-height: normal;
-}
-.prod-metadata div.rateit div {
-  margin: 0 0;
-}
-.prod-metadata .name {
-  font-weight: bold;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.prod-metadata .desc {
-  color: #888;
-  font-size: 10px;
-}
-.prod-metadata .price,
-.prod-metadata .rating {
-  margin-bottom: 5px;
-}
-.prod-metadata .rating {
-  color: #888;
-  font-size: 10px;
-}
-.prod-metadata .rating .rateit {
-  vertical-align: middle;
-}
-.add-to-cart button {
-  margin-top: 10px;
-}
-.media-review {
-  margin-bottom: 10px;
-}
-.media-review .date,
-.media-review .byline {
-  color: #888;
-  font-size: 10px;
-  line-height: normal;
-}
-.media-review .comment {
-  margin-top: 10px;
-}
-#reviews {
-  margin-top: 20px;
-}
-#dlg-add-review .rateit {
-  margin-top: 5px;
-}
-#dlg-add-review .help-block {
-  color: #888;
-  font-size: 10px;
-  line-height: normal;
-}
-#checkout .form-inline,
-#product-info .form-inline {
-  padding: 20px 0 20px 35px;
-}
-.img-gravitar {
-  background: #ffffff url(../img/gravitar.jpg) no-repeat 50% 50%;
-  width: 64px;
-  height: 64px;
-}
-.footer {
-  border-top: solid 1px #eee;
-  padding: 5px;
-  margin: 20px 0 10px;
-  color: #aaa;
-  letter-spacing: 0.1em;
-  font-size: 11px;
-  text-align: center;
-}
-#welcome .navbar label {
-  padding-left: 30px;
-  cursor: default;
-}
-#welcome .carousel {
-  background-image: url(../img/carousel/bg.png);
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
-  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-#welcome .carousel .item {
-  height: 347px;
-}
-#welcome .carousel .carousel-caption {
-  background-color: transparent;
-  position: absolute;
-  bottom: 25px;
-  right: 20px;
-  text-align: right;
-}
-#welcome .carousel .carousel-caption img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 347px;
-}
-#welcome .carousel .carousel-caption h2 {
-  color: #fff;
-  font-size: 65px;
-  letter-spacing: -0.05em;
-  font-weight: normal;
-  line-height: 60px;
-  text-shadow: #000000 0 1px 10px;
-}
-#welcome .carousel .carousel-caption h3 {
-  color: #fff;
-  background: transparent url(../img/carousel/cloud.png) 50% bottom;
-  width: 214px;
-  font-size: 18px;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  font-weight: normal;
-  padding: 26px 0 0 0;
-  line-height: 20px;
-  text-align: center;
-  display: inline-block;
-  height: 71px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-#welcome .carousel .carousel-caption h4 {
-  color: #58595b;
-  text-shadow: rgba(255, 255, 255, 0.5) 0 -1px 1px;
-  font-weight: normal;
-  font-size: 26px;
-  line-height: 33px;
-}
-#welcome .carousel .carousel-caption p {
-  text-shadow: rgba(255, 255, 255, 0.3) 0 -1px 1px;
-  color: #737477;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 27px;
-  margin-bottom: 5px;
-}
-#welcome .carousel .carousel-caption p b {
-  color: #58595b;
-}
-#welcome .carousel .carousel-indicators {
-  bottom: 20px;
-  top: auto;
-  right: 35px;
-}
-#welcome .carousel .carousel-indicators li {
-  cursor: pointer;
-}
-#welcome .carousel .carousel-control {
-  top: 10%;
-}
-#welcome .workload-detail {
-  display: none;
-}
-#welcome #workloads td {
-  vertical-align: middle;
-}
-#welcome #workloads .desc {
-  margin-bottom: 2px;
-  color: #aaa;
-}
-#welcome #workloads input {
-  margin-bottom: 0 !important;
-}
-#welcome #workloads h4 {
-  margin-top: 6px;
-}
-#welcome #workloads .steps {
-  width: 250px;
-}
-#welcome #workloads .steps ol {
-  margin-bottom: 0;
-}
-#welcome #workloads .steps ol li {
-  font-size: 12px;
-  line-height: normal;
-}
-#welcome #ddl {
-  display: none;
-  margin-bottom: 30px;
-}
-#welcome #ddl textarea {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  font-family: monospace;
-  width: 100%;
-  height: 300px;
-  white-space: nowrap;
-  overflow: auto;
-}
+body{overflow-y:scroll;padding-top:20px}form{margin:0}.loading{background:transparent url(../img/loading.gif) no-repeat 50% 50%;width:100%;height:100px}.hidden{display:none}.icon-github{background:url(../img/github.png);width:16px;height:16px;margin-top:0}.icon-nuodb{background:url(../img/nuodb.png);width:16px;height:16px;margin-top:0}th.text-right,td.text-right{text-align:right}th.text-center,td.text-center{text-align:center}#top-bar .brand{padding:0 20px 0 0;white-space:nowrap}#top-bar .brand img{border-top-left-radius:4px;border-bottom-left-radius:4px;vertical-align:top;height:36px;margin:2px 5px 0 20px}#top-bar .brand label{display:inline-block;padding-top:10px;font-size:20px;font-weight:700;text-shadow:rgba(255,255,255,.74902) 0 1px 1px}#top-bar .nav>li>a{padding:10px}#top-bar .cart .badge{margin-left:10px}#top-bar #admin-link{display:none}#top-bar .search{position:relative}#top-bar .search .search-query{line-height:normal;padding-right:29px}#top-bar .search .search-icon{position:absolute;top:7px;right:11px;width:16px;height:16px}#top-bar .search .search-icon a,#top-bar .search .search-icon i{width:16px;height:16px;position:absolute;top:0;left:0}#top-bar .search .search-icon .search-glass{background:transparent url(../img/search.png) no-repeat 0 0}#top-bar .search .search-icon .search-clear{display:none;font-size:20px;color:#000;cursor:pointer;top:-2px;text-decoration:none}#top-bar .search .search-icon-clear .search-glass{display:none}#top-bar .search .search-icon-clear .search-clear{display:block}#top-bar .navbar-text{padding-right:10px}#category-nav li .close{color:#fff;display:none;opacity:1;font-weight:400;text-shadow:#000 0 1px 0}#category-nav li.active .close{display:block}#category-nav li.active a{background-color:#005580;color:#fff;cursor:pointer}#col-content .navbar{min-height:35px}.sidebar h3{font-size:18px;margin-top:5px}.thumbnails-prod a:hover,.thumbnails-prod a:active{text-decoration:none}.thumbnails-prod img{height:210px;max-width:210px;width:auto}.price{color:#900!important;font-weight:700}.prod-metadata{margin-top:2px}.prod-metadata div{margin:2px 0;line-height:normal}.prod-metadata div.rateit div{margin:0 0}.prod-metadata .name{font-weight:700;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}.prod-metadata .desc{color:#888;font-size:10px}.prod-metadata .price,.prod-metadata .rating{margin-bottom:5px}.prod-metadata .rating{color:#888;font-size:10px}.prod-metadata .rating .rateit{vertical-align:middle}.add-to-cart button{margin-top:10px}.media-review{margin-bottom:10px}.media-review .date,.media-review .byline{color:#888;font-size:10px;line-height:normal}.media-review .comment{margin-top:10px}#reviews{margin-top:20px}#dlg-add-review .rateit{margin-top:5px}#dlg-add-review .help-block{color:#888;font-size:10px;line-height:normal}#checkout .form-inline,#product-info .form-inline{padding:20px 0 20px 35px}.img-gravitar{background:#fff url(../img/gravitar.jpg) no-repeat 50% 50%;width:64px;height:64px}.footer{border-top:solid 1px #eee;padding:5px;margin:20px 0 10px;color:#aaa;letter-spacing:.1em;font-size:11px;text-align:center}#welcome .navbar label{padding-left:30px;cursor:default}#welcome .carousel{background-image:url(../img/carousel/bg.png);-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;-webkit-box-shadow:0 2px 4px rgba(0,0,0,.2);-moz-box-shadow:0 2px 4px rgba(0,0,0,.2);box-shadow:0 2px 4px rgba(0,0,0,.2)}#welcome .carousel .item{height:347px}#welcome .carousel .carousel-caption{background-color:transparent;position:absolute;bottom:25px;right:20px;text-align:right}#welcome .carousel .carousel-caption img{position:absolute;top:0;left:0;height:347px}#welcome .carousel .carousel-caption h2{color:#fff;font-size:65px;letter-spacing:-.05em;font-weight:400;line-height:60px;text-shadow:#000 0 1px 10px}#welcome .carousel .carousel-caption h3{color:#fff;background:transparent url(../img/carousel/cloud.png) 50% bottom;width:214px;font-size:18px;letter-spacing:.1em;text-transform:uppercase;font-weight:400;padding:26px 0 0 0;line-height:20px;text-align:center;display:inline-block;height:71px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}#welcome .carousel .carousel-caption h4{color:#58595b;text-shadow:rgba(255,255,255,.5) 0 -1px 1px;font-weight:400;font-size:26px;line-height:33px}#welcome .carousel .carousel-caption p{text-shadow:rgba(255,255,255,.3) 0 -1px 1px;color:#737477;font-weight:400;font-size:18px;line-height:27px;margin-bottom:5px}#welcome .carousel .carousel-caption p b{color:#58595b}#welcome .carousel .carousel-indicators{bottom:20px;top:auto;right:35px}#welcome .carousel .carousel-indicators li{cursor:pointer}#welcome .carousel .carousel-control{top:10%}#welcome .workload-detail{display:none}#welcome #workloads td{vertical-align:middle}#welcome #workloads .desc{margin-bottom:2px;color:#aaa}#welcome #workloads input{margin-bottom:0!important}#welcome #workloads h4{margin-top:6px}#welcome #workloads .steps{width:250px}#welcome #workloads .steps ol{margin-bottom:0}#welcome #workloads .steps ol li{font-size:12px;line-height:normal}#welcome #ddl{display:none;margin-bottom:30px}#welcome #ddl textarea{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;font-family:monospace;width:100%;height:300px;white-space:nowrap;overflow:auto}
