Moved "Remove All Data" button and message to make feature less prominent

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -85,6 +85,7 @@ th.text-center, td.text-center {
 		.search-query {
 			line-height: normal;
 			padding-right: 29px;
+			width: 175px;
 		}
 		
 		.search-icon {
