Region menu; URL detection and region switching

--- a/StorefrontDemo/src/main/webapp/admin/css/app.css
+++ b/StorefrontDemo/src/main/webapp/admin/css/app.css
@@ -15,7 +15,7 @@
 }
 
 .x-toolbar-default.message {
-    background-color: #c00;
+    background-color: #eb8021;
     background-image: none;
     padding: 5px 10px;
     z-index: 100;
