Additional control panel dev -- workload adjustments feature complete

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -413,7 +413,7 @@ th.text-center, td.text-center {
 
 #control-panel {
 	.label {
-		min-width: 30px;
+		min-width: 32px;
 		text-align: right;
 	}
 	
@@ -538,6 +538,11 @@ th.text-center, td.text-center {
 						
 						.input-mini {
 							width: 68px;
+							text-align: right;
+						}
+						
+						.btn {
+							width: 83px;
 						}
 					}
 				}
