Refactored models; implemented Nodes tab of control panel

--- a/StorefrontDemo/src/main/webapp/css/Storefront.css
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.css
@@ -452,6 +452,10 @@ td.text-center {
 #control-panel .tab-content {
   overflow: visible;
 }
+#control-panel h4 {
+  margin: 25px 0 10px 0;
+  font-size: 14px;
+}
 #control-panel #table-regions.table {
   table-layout: fixed;
 }
@@ -468,7 +472,6 @@ td.text-center {
 }
 #control-panel #table-regions.table th h4 {
   margin: 10px 0 0 0;
-  font-size: 14px;
 }
 #control-panel #table-regions.table th .btn-group {
   padding-right: 4px;
