--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -460,6 +460,11 @@ th.text-center, td.text-center {
 		overflow: visible;
 	}
 	
+	h4 {
+		margin: 25px 0 10px 0;
+		font-size: 14px;
+	}	
+	
 	#table-regions.table {
 		table-layout: fixed;
 		
@@ -478,7 +483,6 @@ th.text-center, td.text-center {
 			
 			h4 {
 				margin: 10px 0 0 0;
-				font-size: 14px;
 			}
 			
 			.btn-group {
