CPU monitoring; fixes to support MySQL

--- a/StorefrontDemo/src/main/webapp/css/Storefront.css
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.css
@@ -596,24 +596,27 @@ td.text-center {
   background-color: #e5624d !important;
 }
 .label-color-7 {
-  background-color: #e650af !important;
+  background-color: #ff4b5c !important;
 }
 .label-color-8 {
-  background-color: #bd50e5 !important;
+  background-color: #e650af !important;
 }
 .label-color-9 {
-  background-color: #8e6892 !important;
+  background-color: #bd50e5 !important;
 }
 .label-color-10 {
-  background-color: #6084a9 !important;
+  background-color: #8e6892 !important;
 }
 .label-color-11 {
-  background-color: #88979d !important;
+  background-color: #6084a9 !important;
 }
 .label-color-12 {
-  background-color: #97aea0 !important;
+  background-color: #88979d !important;
 }
 .label-color-13 {
+  background-color: #97aea0 !important;
+}
+.label-color-14 {
   background-color: #b0c3c9 !important;
 }
 .label-color-real {
