--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -620,11 +620,12 @@ th.text-center, td.text-center {
 .label-color-4  	{ background-color: #cca61b !important; }
 .label-color-5  	{ background-color: #c76424 !important; }
 .label-color-6  	{ background-color: #e5624d !important; }
-.label-color-7  	{ background-color: #e650af !important; }
-.label-color-8  	{ background-color: #bd50e5 !important; }
-.label-color-9  	{ background-color: #8e6892 !important; }
-.label-color-10 	{ background-color: #6084a9 !important; }
-.label-color-11 	{ background-color: #88979d !important; }
-.label-color-12 	{ background-color: #97aea0 !important; }
-.label-color-13 	{ background-color: #b0c3c9 !important; }
+.label-color-7  	{ background-color: #ff4b5c !important; }
+.label-color-8  	{ background-color: #e650af !important; }
+.label-color-9  	{ background-color: #bd50e5 !important; }
+.label-color-10  	{ background-color: #8e6892 !important; }
+.label-color-11 	{ background-color: #6084a9 !important; }
+.label-color-12 	{ background-color: #88979d !important; }
+.label-color-13 	{ background-color: #97aea0 !important; }
+.label-color-14 	{ background-color: #b0c3c9 !important; }
 .label-color-real  	{ background-color: #777 !important; }
