DB-7569, DB-7449: Storefront region/host sliders + dynamic template sel

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -369,6 +369,16 @@ th.text-center, td.text-center {
 		}		
 	}
 	
+	.progress-inline {
+		display: inline-block;
+		height: 20px;
+		width: 100px;
+		
+		> .bar {
+			background-color: #c0cd30;
+		}
+	}
+	
 	.tab-content {
 		overflow: visible;
 	}
