[DB-7806] Add Database control panel page

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -606,6 +606,7 @@ th.text-center, td.text-center {
 .tour-steps {
 	list-item-style: none;
     counter-reset: li;
+    margin-bottom: 30px;
 	
 	> li {
 		margin-top: 15px;
