--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -631,3 +631,21 @@ th.text-center, td.text-center {
 	    }
 	}
 }
+
+#progress-container {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(255,255,255,0.9);
+    
+    > .progress {
+	    width: 400px;
+	    height: 30px;
+	    margin-left: 50%;
+	    left: -200px;
+	    position: relative;
+	    top: 150px;    
+    }
+}
