[DB-7960] Improved 'heavy load' message; fixed message bar formatting

--- a/StorefrontDemo/src/main/webapp/admin/css/app.less
+++ b/StorefrontDemo/src/main/webapp/admin/css/app.less
@@ -14,11 +14,11 @@
     background-image: none;
     padding: 5px 10px;
     z-index: 100;
-    padding: 3px 20px 3px 0px;
+    padding: 3px 15px;
 
 	.x-toolbar-text {
 	    color: #666;
-	    padding: 8px 10px 8px 0;    
+	    padding: 8px 0 8px 0;    
 	    overflow: hidden;
 	    text-overflow: ellipsis;
 	    white-space: nowrap;
