[DB-8104] Update wording on "guided tour" pages

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -603,6 +603,11 @@ th.text-center, td.text-center {
 	}	
 }
 
+.tour-text {
+	font-size: 15px;
+	font-weight: bold;
+}
+
 .tour-steps {
 	list-item-style: none;
     counter-reset: li;
@@ -629,6 +634,13 @@ th.text-center, td.text-center {
 		    font-weight: bold;
 		    font-size: 12px;    
 	    }
+	}
+}
+
+.tour-links {
+	li {
+		margin-top: 15px;
+		padding-left: 2px;
 	}
 }
 
