DB-8220: Latency stat improvements

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -386,6 +386,11 @@ th.text-center, td.text-center {
 	h4 {
 		margin: 25px 0 10px 0;
 		font-size: 14px;
+		
+		label {
+			display: inline-block;
+			margin-left: 20px;		
+		}
 	}	
 	
 	#table-regions.table {
