DB-8503: Improve Storefront logging

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -666,3 +666,9 @@ th.text-center, td.text-center {
 	    top: 150px;    
     }
 }
+
+pre.log {
+	font-size: 12px;
+	line-height: normal;
+	letter-spacing: -0.05em;
+}
