[DB-8522, DB-8523] Config settings for x and y axes

--- a/StorefrontDemo/src/main/webapp/admin/css/app.less
+++ b/StorefrontDemo/src/main/webapp/admin/css/app.less
@@ -222,3 +222,8 @@
 .ico-up { background-image: url(../img/ico-up.png); }
 .ico-down { background-image: url(../img/ico-down.png); }
 .ico-cancel { background-image: url(../img/ico-cancel.png); }
+
+#chartcontrolbar {
+	background-image: none;
+	background-color: #fff;
+}
