DB-8402, DB-8444:  DB creation form to specify DB name and brokers

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -60,6 +60,10 @@ th.text-center, td.text-center {
 	text-align: center;
 }
 
+textarea.no-resize-x {
+  resize: vertical;
+}
+
 #top-bar {
 	label {
 		float: left;
