[DB-9233] Added more DB info (password, schema, DDL)

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -387,6 +387,10 @@ textarea.no-resize-x {
 		overflow: visible;
 	}
 	
+	h3 {
+		margin-top: 50px;
+	}
+	
 	h4 {
 		margin: 25px 0 10px 0;
 		font-size: 14px;
@@ -667,7 +671,7 @@ textarea.no-resize-x {
 	    margin-left: 50%;
 	    left: -200px;
 	    position: relative;
-	    top: 150px;    
+	    top: 150px;
     }
 }
 
@@ -675,4 +679,11 @@ pre.log {
 	font-size: 12px;
 	line-height: normal;
 	letter-spacing: -0.05em;
+}
+
+#ddl {
+	.border-box();
+	font-family: monospace;
+	width: 100%;
+	height: 300px;
 }
