[DB-9243] Avoid table scans with back office workload

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -683,7 +683,8 @@ pre.log {
 
 #ddl {
 	.border-box();
+	cursor: default;
 	font-family: monospace;
-	width: 100%;
 	height: 300px;
+	width: 100%;
 }
