[DB-12937] Sync'd DB POST/PUT req. to match API spec; improved logging

--- a/StorefrontDemo/src/main/webapp/admin/css/app.less
+++ b/StorefrontDemo/src/main/webapp/admin/css/app.less
@@ -80,7 +80,7 @@
 	.label-metric {
 	    color: #958979;
 	    font-size: 12px;
-	    font-family: museo-sans-rounded, Tahoma;
+	    font-family: museo-sans-rounded, "Open Sans", Tahoma;
 	    padding: 4px 2px 2px 25px;
 	    text-align: left;
 	    position: relative;
@@ -102,7 +102,7 @@
 	    color: #363d45;
 		cursor: pointer;
 	    font-size: 35px;
-	    font-family: museo-sans-rounded, Tahoma;
+	    font-family: museo-sans-rounded, "Open Sans", Tahoma;
 	    height: 40px;
 	    text-align: right;
 	    padding: 4px 8px;
@@ -171,7 +171,7 @@
 
 #navbar {
 	background-color: #f8f8f8;
-	font-family: museo-sans-rounded, Tahoma;
+	font-family: museo-sans-rounded, "Open Sans", Tahoma;
 	font-size: 14px;
 	font-weight: normal;
 	padding-top: 20px;
